# Business-and-AI

./: .env.example  .gitignore  README.md  env.example  package-lock.json  package.json  pyproject.toml  run_review_api.py
src/: pdf_text_extractor.py  pyproject.toml
src/quoting/: cli.py  pipeline.py
src/quoting/api/: __init__.py  _common.py  approval_store.py  container.py  frontend_router.py  job_queue.py  pipeline_coordinator.py  progress_bus.py  progress_store.py  response_models.py  review_api.py  settings_store.py  step_handlers.py
src/quoting/api/routers/: attachments.py  events.py  reviews.py  stammdaten.py
src/quoting/api/services/: debug_service.py  metrics_service.py  quality_gate_service.py  review_read_service.py  review_service.py  review_workflow_service.py  upload_service.py
src/quoting/api/use_cases/: mutations.py  quotation.py  review_detail.py
src/quoting/core/: config.py  schema.py
src/quoting/data/: repository.py
src/quoting/extraction/: extractor.py  fast_path.py  prompts.py
src/quoting/extraction/llm/: azure.py  base.py  gemini.py
src/quoting/ingestion/: __init__.py  mail.py
src/quoting/matching/: matcher.py
src/quoting/output/: __init__.py  json_writer.py  reply_body_prompt.py
src/quoting/output/pdf/: pdf_builder.py
src/quoting/pipeline/: context.py  orchestrator.py  result.py
src/quoting/pricing/: discounts.py  quotation.py
src/quoting/reviews/: __init__.py  lifecycle.py  pdfs.py  quotation_store.py  source_highlights.py  sqlite_repository.py  store.py  summary.py
src/quoting/ui/: review_app.py
(+266 files in other folders)
