[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-ocr-llm-pipeline"
version = "0.1.0"
description = "Pipeline zur PDF-Verarbeitung mit OCR, Bildextraktion und LLM-Analyse"
authors = [
    { name = "Dein Name" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pymupdf>=1.23.0",       
    "pytesseract>=0.3.10",
    "openai>=1.0.0",
    "pdf2image>=1.16.0",
    "tqdm>=4.66.0",
    "Pillow>=9.0.0"          
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pytest"
]

[tool.setuptools]
py-modules = ["pdf_extractor"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]